--- a/pertemuan-02/index.html
+++ b/pertemuan-02/index.html
@@ -8,13 +8,28 @@
 <body>
     <header>
 
-        
+        <h1></h1>
+        <nav>
+            <ol>
+                <li>emmet untuk struktur html5"</li>
+                <li>emmet untuk header+main+footer</li>
+                <li>emmet untuk header yaitu h1+nav>li*3>a</li>
+            </lo>
+        </nav>
     </header>
     <main>
-
+        <section>
+            <h2></h2>
+            <p></p>
+        </section>
+        <section>
+            <h2></h2>
+            <p></p>
+        </section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
