--- a/pertemuan-02/index.html
+++ b/pertemuan-02/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>judul halaman</title>
 </head>
 <body>
     <header>
 
-        <h1></h1>
+        <h1>ini header</h1>
         <nav>
             <ol>
-                <li>emmet untuk struktur html5"</li>
-                <li>emmet untuk header+main+footer</li>
-                <li>emmet untuk header yaitu h1+nav>li*3>a</li>
+                <li><a href="#home">beranda</a></li>
+                <li><a href="#about">tentang</a></li>
+                <li><a href="#contact">kontak</a>>a</li>
             </lo>
         </nav>
     </header>
