mengisi entity html

--- a/pertemuan-02/index.html
+++ b/pertemuan-02/index.html
@@ -13,18 +13,20 @@
             <ol>
                 <li><a href="#home">beranda</a></li>
                 <li><a href="#about">tentang</a></li>
-                <li><a href="#contact">kontak</a>>a</li>
+                <li><a href="#contact">kontak</a></li>
             </lo>
         </nav>
     </header>
     <main>
-        <section>
-            <h2></h2>
-            <p></p>
-        </section>
-        <section>
-            <h2></h2>
-            <p></p>
+        <section id="home">
+            <h2>selamat datang</h2>
+                <p>hai semua siapa jago maen epep</p>
+        </section id="about">
+            <h2>tentang kami</h2>
+                <p>ini adalah halaman web kami</p>
+    </section id="contact">
+            <h2>hubungi kami</h2>
+                <p>kandi [2511530018]</p>
         </section>
     </main>
     <footer>
