mengisi tentang identitas saya

--- a/pertemuan-02/index.html
+++ b/pertemuan-02/index.html
@@ -22,8 +22,17 @@
             <h2>selamat datang</h2>
                 <p>hai semua siapa jago maen epep</p>
         </section id="about">
-            <h2>tentang kami</h2>
-                <p>ini adalah halaman web kami</p>
+            <h2>Selamat datang</h2>
+                <p>perkenalkan nama saya Tri Kandi 
+                    <p>NIM : 2511530018</p>
+                <P>Saya lahir di Neknang</p>
+                    <p>tanggal lahir 17 juli 2007</p>
+                    <p>Hobi saya memancing dan bermain voli</p>
+                    <p>nama ayah saya Tasrul</p>
+                    <p>Nama Ibu saya Mariana</p>
+                    <p>saya 3 besaudara dan saya anak terakhir</p>
+                    <p>kakak pertama saya bernama Suganda</p>
+                    <p>dan kakak kedua Saya sasti Firdianti &#128525;</p>
     </section id="contact">
             <h2>hubungi kami</h2>
                 <p>kandi [2511530018]</p>
