copy index.html dari pertemuan-02 kepertemuan-03

--- a/pertemuan-02/index.html
+++ b/pertemuan-02/index.html
@@ -32,10 +32,10 @@
                     <p>Nama Ibu saya Mariana</p>
                     <p>saya 3 besaudara dan saya anak terakhir</p>
                     <p>kakak pertama saya bernama Suganda</p>
-                    <p>dan kakak kedua Saya sasti Firdianti (&#128525;)</p>
+                    <p>dan kakak kedua Saya sasti Firdianti &#128525;</p>
     </section id="contact">
-            <h2>hubungi kami</h2>
-                <p>kandi [2511530018]</p>
+            <h2>hubungi saya</h2>
+                <p>083827922829 (bapak kandi)</p>
         </section>
     </main>
     <footer>
