mengisi section dengan kontak emmeet

--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -25,18 +25,27 @@ Kandi/pertemuan-02/index.html
         </section id="about">
             <h2>Selamat datang</h2>
                 <p>perkenalkan nama saya Tri Kandi 
-                    <p><strong>NIM</strong>2511530018</p>
-                <P><STRONG>tempat lahir</STRONG>Neknang</p>
-                    <p><strong>tanggal lahir</strong>17 juli 2007</p>
-                    <p><strong>Hobi</strong>memancing dan bermain voli</p>
+                    <p><strong>NIM</strong> 2511530018</p>
+                <P><STRONG>tempat lahir</STRONG> Neknang</p>
+                    <p><strong>tanggal lahir</strong> 17 juli 2007</p>
+                    <p><strong>Hobi</strong> memancing dan bermain voli</p>
                     <p><strong>Nama Ayah</strong> Tasrul</p>
                     <p><strong>Nama Ibu</strong> Mariana</p>
-                    <p><strong>Saudara</strong>3 Bersaudara saya anak terakhir</p>
-                    <p><strong>kakak Laki-laki</strong>Suganda</p>
-                    <p><strong>kakak Perempuan</strong>sasti Firdianti &#128525;</p>
+                    <p><strong>Saudara</strong> 3 Bersaudara saya anak terakhir</p>
+                    <p><strong>kakak Laki-laki</strong> Suganda</p>
+                    <p><strong>kakak Perempuan</strong> sasti Firdianti &#128525;</p>
     </section id="contact">
             <h2>hubungi saya</h2>
-                <p>083827922829 (bapak kandi)</p>
+            <form action="">
+                <label for=""></label>
+                <input type="text">
+                <label for=""></label>
+                <input type="text">
+                <label for=""></label>
+                <textarea name="" id=""></textarea>
+
+                <button></button>
+            </form>
         </section>
     </main>
     <footer>
