mengisi area kontak

--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -36,13 +36,13 @@ Kandi/pertemuan-02/index.html
                     <p><strong>kakak Perempuan</strong> sasti Firdianti &#128525;</p>
     </section id="contact">
             <h2>hubungi saya</h2>
-            <form action="">
-                <label for=""></label>
-                <input type="text">
-                <label for=""></label>
-                <input type="text">
-                <label for=""></label>
-                <textarea name="" id=""></textarea>
+            <form action=""method="POST">
+                <label for="TXTNama">Nama:</label>
+                <input type="txtNama" id="txtNama" required placeholder="text">
+                <label for="txtemail">Email :</label>
+                <input type="txtemail" id="txtemail" required placeholder="Email">
+                <label for="txtpesan">pesan</label>
+                <textarea name="Txtpesan" id="txtpesan" required placeholder="pesan"></textarea>
 
                 <button></button>
             </form>
