--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -5,6 +5,16 @@ Kandi/pertemuan-02/index.html
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>judul halaman</title>
+    <style>
+        #about{
+        background-color: #ffffff;
+        border-radius: 10%;
+        padding: 20px;
+        max-width:700px;
+        margin: 20px auto;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
     <header>
