stling about section 2

--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -1,4 +1,4 @@
-Kandi/pertemuan-02/index.html
+Kandi/pertemuan-03/index.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,12 +7,21 @@ Kandi/pertemuan-02/index.html
     <title>judul halaman</title>
     <style>
         #about{
-        background-color: #ffffff;
-        border-radius: 10%;
+        background-color: oklch(46.527% 0.08097 96.061);
+        border-radius: 10px;
         padding: 20px;
         max-width:700px;
         margin: 20px auto;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        #about h2 {
+            color: #003366;
+            border-bottom: 2px solid 2#003366;
+            padding-bottom: 6px;
+            margin-top: 0px;
+            margin-bottom: 16px;
+
         }
     </style>
 </head>
