stling about section tag strong

--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -23,6 +23,14 @@ Kandi/pertemuan-03/index.html
             margin-bottom: 16px;
 
         }
+        #about p{
+            display: flex;
+            justify-content: flex-start;
+            align-items: baseline;
+            margin: 0%;
+            padding: 6px 0;
+            border-bottom: 1px solid #0b2b4b;
+        }
     </style>
 </head>
 <body>
