--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -31,6 +31,14 @@ Kandi/pertemuan-03/index.html
             padding: 6px 0;
             border-bottom: 1px solid #0b2b4b;
         }
+        #about strong {
+min-width:180px ;
+color: #003366;
+font-weight: 600;
+text-align: right;
+padding-right: 16px;
+flex-shrink: 0;
+        }
     </style>
 </head>
 <body>
